--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,5 +3,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="edittext_hint"><font size="12">Điền thông tin mới</font></string>
-
+    <string name="action_search">Search</string>
 </resources>
